--- a/src/components/FormattedDateSmall.astro
+++ b/src/components/FormattedDateSmall.astro
@@ -22,7 +22,7 @@ const { date } = Astro.props;
 		align-items: center;
 		gap: 2%;
 	}
-	[astro-icon] {
+	[data-icon] {
 		height: 1rem;
 		vertical-align: middle;
 		color: var(--accent);
