--- a/src/components/Nav/NavigationBar_old.astro
+++ b/src/components/Nav/NavigationBar_old.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 import NavItem from "./NavItem.astro";
 
 const pathname = new URL(Astro.request.url).pathname;
@@ -83,7 +83,7 @@ const { className } = Astro.props;
         flex-direction: row;
     }
 
-    .logo [astro-icon="freibadLogo"] {
+    .logo [data-icon="freibadLogo"] {
         display: block !important;
         fill: var(--primary-dark);
         width: 50px !important;
@@ -162,7 +162,7 @@ const { className } = Astro.props;
     }
 
     @media screen and (max-width: 400px) {
-        .logo [astro-icon="freibadLogo"] {
+        .logo [data-icon="freibadLogo"] {
             display: none !important;
         }
 
