--- a/src/components/impressum/LizenzenGrid.astro
+++ b/src/components/impressum/LizenzenGrid.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 ---
 
 <div class="grid">
@@ -124,7 +124,7 @@ import { Icon } from "astro-icon";
     color: var(--text);
     fill: var(--text);
   }
-  [astro-icon] {
+  [data-icon] {
     height: 24px;
     width: 24px;
   }
