--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -3,7 +3,7 @@ import type { CollectionEntry } from "astro:content";
 import FormattedDate from "../components/FormattedDate.astro";
 import BlogImage from "../components/Neues/BlogImage.astro";
 import MainLayout from "./MainLayout.astro";
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 import Back from "../components/Back.astro";
 
 type Props = CollectionEntry<"neues">["data"];
