--- a/src/pages/mitglied.astro
+++ b/src/pages/mitglied.astro
@@ -1,79 +1,82 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 ---
 
 <MainLayout
-  titel="Mitgliedschaft"
-  description="Mitglied im Förderverein Freibad Delligsen beantragen"
+    titel="Mitgliedschaft"
+    description="Mitglied im Förderverein Freibad Delligsen beantragen"
 >
-  <div class="grid">
-    <h1>Mitgliedschaft</h1>
-    <p>
-      Werden Sie Mitglied im F&ouml;rderverein Freibad Delligsen e.V. und
-      unterstützen Sie uns beim Erhalt des Delligser Freibades.
-      <br /><br />
-      Wir freuen uns über jedes Mitglied. Ob jung oder alt, jeder ist herzlich willkommen.
-      Mit einer Mitgliedschaft, ob aktiv oder passiv, helfen Sie uns das Freibad
-      Delligsen noch viele Jahre zu erhalten.
-      <br /><br />
-      Die Beitrittserklärung einschl. Jahresbeiträge und die Satzung erhalten Sie
-      hier als Download:
-    </p>
-    <div class="download">
-      <Icon name="IcRoundDownload" />
-      <ul>
-        <li>
-          <a
-            href="/documents/Beitrittserklaerung_Foerderverein_Freibad_Delligsen.pdf"
-            target="_blank">
-            Beitrittserklaerung Foerderverein Freibad Delligsen e.V.
-          </a>
-        </li>
-        <li>
-          <a
-            href="/documents/Satzung_Foerderverein_Freibad_Delligsen.pdf"
-            target="_blank">
-            Satzung Foerderverein Freibad Delligsen e.V.
-          </a>
-        </li>
-      </ul>
+    <div class="grid">
+        <h1>Mitgliedschaft</h1>
+        <p>
+            Werden Sie Mitglied im F&ouml;rderverein Freibad Delligsen e.V. und
+            unterstützen Sie uns beim Erhalt des Delligser Freibades.
+            <br /><br />
+            Wir freuen uns über jedes Mitglied. Ob jung oder alt, jeder ist herzlich
+            willkommen. Mit einer Mitgliedschaft, ob aktiv oder passiv, helfen Sie
+            uns das Freibad Delligsen noch viele Jahre zu erhalten.
+            <br /><br />
+            Die Beitrittserklärung einschl. Jahresbeiträge und die Satzung erhalten
+            Sie hier als Download:
+        </p>
+        <div class="download card bg-base-100 shadow-xl items-center p-2">
+            <Icon name="IcRoundDownload" />
+            <ul>
+                <li>
+                    <a
+                        href="/documents/Beitrittserklaerung_Foerderverein_Freibad_Delligsen.pdf"
+                        target="_blank"
+                    >
+                        Beitrittserklaerung Foerderverein Freibad Delligsen e.V.
+                    </a>
+                </li>
+                <li>
+                    <a
+                        href="/documents/Satzung_Foerderverein_Freibad_Delligsen.pdf"
+                        target="_blank"
+                    >
+                        Satzung Foerderverein Freibad Delligsen e.V.
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </div>
 </MainLayout>
 <style>
-  .grid {
-    color: var(--text);
-    display: grid;
-    max-width: 800px;
-    margin-inline: auto;
-    gap: 2em;
-    background-color: var(--article);
-    padding: 4%;
-    border-radius: 16px;
-    border: var(--border-grey) 1px solid;
-  }
-  .download {
-    display: grid;
-    gap: 3rem;
-    grid-template-columns: 1fr 4fr;
-  }
-  [astro-icon] {
-    color: var(--primary);
-  }
-  a {
-    color: var(--text);
-    font-weight: 700;
-    transition: color 0.2s ease-in;
-  }
-  a:hover {
-    color: var(--primary);
-  }
-  ul {
-    vertical-align: middle;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 1rem;
-  }
+    h1 {
+        font-weight: 500;
+        margin-block: 1rem;
+        font-size: clamp(1.7rem, 1.4551rem + 1.3061vw, 2.5rem);
+    }
+    .grid {
+        display: grid;
+        max-width: 800px;
+        margin-inline: auto;
+        gap: 2em;
+    }
+    .download {
+        display: grid;
+        gap: 3rem;
+        grid-template-columns: 1fr 4fr;
+    }
+    [data-icon] {
+        width: 100%;
+        color: var(--primary);
+    }
+    a {
+        color: var(--text);
+        font-weight: 700;
+        transition: color 0.2s ease-in;
+    }
+    a:hover {
+        color: var(--primary);
+    }
+    ul {
+        vertical-align: middle;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 1rem;
+    }
 </style>
