--- a/src/components/Accordion/AccordionItem.astro
+++ b/src/components/Accordion/AccordionItem.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 import { Picture } from 'astro:assets';
 const { src, icon, label, active, width } = Astro.props;
 ---
