--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -1,7 +1,7 @@
 ---
 // component imports
 import Link from "./Link.astro";
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 
 const { prevUrl, nextUrl, currentPage, totalPage } = Astro.props;
 const prev = currentPage > 1 ? "" : "disabled";
